--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -164,7 +164,60 @@ div.gallery img {
     }
 
 @media(max-width: 768px) {
+    .wrapper {
+        width: 93%;
+        margin-left: 35px;
+        height: auto;
+    }
 
+    .content {
+        margin: 0;
+        height: auto;
+    }
+
+    .content h2 {
+        width: 90%;
+    }
+
+    .contact-wrapper {
+        width: 92%;
+    }
+
+    .portfolio-wrapper {
+        width: 93%;
+        height: auto;
+
+    }
+
+    div.gallery {
+        float: none;
+        display: inline-block;
+        width: 300px;
+        height: 150px;
+    }
+
+    .desc1 {
+        bottom: 225px;
+    }
+
+    .desc2 {
+        bottom: 125px;
+    }
+
+    .desc3 {
+        bottom: 90px;
+    }
+
+    .my-form input[type="text"] {
+    padding: 10px 0px;
+    width: 100%;
+    }
+
+    #form-message {
+        height: 175px;
+        width: 100%;
+
+    }
 
 
 }
